Fixed Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
 
 * {
     font-family: sans-serif;
+    overflow-x: hidden;
 }
 
 
